--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="Utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal Profile</title>
-    <link rel="stylesheet" type="text/css" href="Personal-Profile.css"/>
+    <link rel="stylesheet" type="text/css" href="Style.css"/>
 </head>
 <body>
     <header>
